group("learn_basic") {
  deps = [
    ":learn_command_line",
    ":learn_hello",
    ":learn_string",
  ]
}

executable("learn_hello") {
  sources = [ "hello_main.cc" ]
}

executable("learn_string") {
  sources = [ "string_main.cc" ]
  deps = [ "//base" ]
}

executable("learn_command_line") {
  sources = [ "command_line_main.cc" ]
  deps = [ "//base" ]
}
