group("learn_basic") {
  deps = [
    ":learn_command_line",
    ":learn_file",
    ":learn_hello",
    ":learn_logging",
    ":learn_string",
  ]
}

executable("learn_hello") {
  sources = [ "hello_main.cc" ]
}

executable("learn_string") {
  sources = [ "string_main.cc" ]
  deps = [ "//base" ]
}

executable("learn_command_line") {
  sources = [ "command_line_main.cc" ]
  deps = [ "//base" ]
}

executable("learn_logging") {
  sources = [ "logging_main.cc" ]
  deps = [ "//base" ]
}

executable("learn_file") {
  sources = [ "file_main.cc" ]
  deps = [ "//base" ]
}
