import("//testing/test.gni")

group("learn_tests") {
  testonly = true
  deps = [ ":sample_api_unittests" ]
}

static_library("sample_api") {
  sources = [
    "sample_api.cc",
    "sample_api.h",
  ]
}

test("sample_api_unittests") {
  testonly = true
  sources = [ "sample_api_unittests.cc" ]
  deps = [
    ":sample_api",
    "//base/test:run_all_unittests",
    "//testing/gtest",
  ]
}
